[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprite/Character/Main/IMG-2578.PNG" type="Texture" id=1]
[ext_resource path="res://Sprite/Character/Main/IMG-2581.PNG" type="Texture" id=2]
[ext_resource path="res://Sprite/Character/Rival/IMG-2595.PNG" type="Texture" id=3]
[ext_resource path="res://Screen/Menu/TitleCustomize.gd" type="Script" id=4]
[ext_resource path="res://Sprite/Character/Main/IMG-2596.PNG" type="Texture" id=5]
[ext_resource path="res://Font/titleselect.tres" type="DynamicFont" id=6]
[ext_resource path="res://Screen/Game/Animation/FireballOrange.tscn" type="PackedScene" id=7]
[ext_resource path="res://Screen/Game/Animation/FireballYellow.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -1.33484
margin_right = 1280.0
margin_bottom = 718.665
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0745098, 0.027451, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="ColorRect"]
margin_left = 95.0
margin_top = 450.0
margin_right = 295.0
margin_bottom = 570.0
custom_styles/hover = SubResource( 1 )
custom_fonts/font = ExtResource( 6 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockA" type="Button" parent="ColorRect"]
visible = false
margin_left = 390.0
margin_top = 450.0
margin_right = 590.0
margin_bottom = 575.0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockB" type="Button" parent="ColorRect"]
visible = false
margin_left = 700.0
margin_top = 450.0
margin_right = 900.0
margin_bottom = 575.0
custom_styles/hover = SubResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockC" type="Button" parent="ColorRect"]
visible = false
margin_left = 1000.0
margin_top = 450.0
margin_right = 1200.0
margin_bottom = 575.0
custom_styles/hover = SubResource( 4 )
custom_fonts/font = ExtResource( 6 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ColorRect"]
margin_left = 538.556
margin_top = 602.14
margin_right = 786.556
margin_bottom = 687.14
custom_styles/hover = SubResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireballWin" parent="ColorRect" instance=ExtResource( 7 )]
visible = false
position = Vector2( 810.652, 231.257 )

[node name="FireballLose" parent="ColorRect" instance=ExtResource( 7 )]
visible = false
position = Vector2( 1119, 232.592 )

[node name="FireballDraw" parent="ColorRect" instance=ExtResource( 8 )]
visible = false
position = Vector2( 499.635, 227.253 )

[node name="FireballOrigin" parent="ColorRect" instance=ExtResource( 8 )]
visible = false
position = Vector2( 184.613, 227.253 )

[node name="ImageOrigin" type="Sprite" parent="ColorRect"]
position = Vector2( 196.626, 247.475 )
scale = Vector2( 0.512331, 0.51233 )
texture = ExtResource( 5 )

[node name="ImageLose" type="Sprite" parent="ColorRect"]
visible = false
position = Vector2( 1108.32, 233.927 )
texture = ExtResource( 3 )

[node name="ImageWin" type="Sprite" parent="ColorRect"]
visible = false
position = Vector2( 818.661, 229.922 )
texture = ExtResource( 1 )

[node name="ImageDraw" type="Sprite" parent="ColorRect"]
visible = false
position = Vector2( 499.635, 235.262 )
texture = ExtResource( 2 )

[connection signal="pressed" from="ColorRect/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="ColorRect/LockA" to="." method="_on_LockA_pressed"]
[connection signal="pressed" from="ColorRect/LockB" to="." method="_on_LockB_pressed"]
[connection signal="pressed" from="ColorRect/LockC" to="." method="_on_LockC_pressed"]
[connection signal="pressed" from="ColorRect/Back" to="." method="_on_Back_pressed"]
